add video popup

--- a/news-list.html
+++ b/news-list.html
@@ -188,7 +188,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -201,7 +203,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -214,7 +218,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -227,7 +233,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -240,7 +248,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -253,7 +263,9 @@
                             <article class="article">
                                 <img src="dist/images/article.jpg" alt="Металсервис" class="article__img">
                                 <div class="article__main">
-                                    <h3 class="title3 article__title">Металсервис</h3>
+                                    <h3 class="title3 article__title">
+                                        <a href="#" class="btn-open-news">Металсервис</a>
+                                    </h3>
                                     <p class="text article__text">В связи с погодными условиями, нам важно привлекать
                                         больше курьеров-партнёров на платформу – поэтому мы временно увеличиваем тариф
                                         на доставку. Вся сумма переходит нашим героям-курьерам!
@@ -311,6 +323,106 @@
             </div>
         </div>
     </footer>
+    <div class="popup news-popup popup_hide">
+        <div class="news-popup__content">
+            <div class="news-popup__body">
+                <h2 class="title2 news-popup__title">Как финансист из Нур-Султана помогает заработать на МСБ 25% годовых
+                </h2>
+                <img src="dist/images/news/3.jpg" alt="" class="news-popup__main-img">
+                <div class="news-popup__main">
+                    <p>Четыре года назад имевший 18-летний опыт работы в финансовом
+                        секторе, увлеченный
+                        темами инвестиций и технологий Нурбек Раев создал Telegram-канал iKapitalist. Там он стал
+                        делиться
+                        собственным мнением об инвестициях. За плечами выпускника Актюбинского государственного
+                        университета и
+                        Чикагской школы бизнеса к тому моменту был богатый опыт работы: независимым экспертом ЕС по
+                        информационным технологиям в Брюсселе, в международной IT-компании Atos в Мадриде, а по
+                        возвращении в
+                        Казахстан – вице-министром индустрии и торговли, топ-менеджером в международных инвестиционных
+                        фондах.
+                    </p>
+                    <blockquote>
+                        Поскольку в тот период я уже занялся консалтингом, решил, что проще будет через Telegram давать
+                        некое
+                        «руководство по эксплуатации» инвестиций для предпринимателей, чтобы не объяснять одно и то же
+                        каждый
+                        раз
+                        <span>– поясняет 44-летний Раев.</span>
+                    </blockquote>
+                    <h3>По заявкам подписчиков</h3>
+                    <p>В апреле 2019 года он узнал, что МФЦА привлек Европейский банк
+                        реконструкции и развития (ЕБРР) к разработке стандартов осуществления краудфандинга в
+                        Казахстане. До
+                        этого запускалось несколько отечественных крауд-площадок, но в итоге осталась только одна,
+                        которая
+                        достаточно успешно собирала средства, в основном на культурные и благотворительные проекты.
+                        Площадки же,
+                        где можно было бы брать средства взаймы на процентной основе или инвестировать в долю бизнеса,
+                        не было.
+                        Отсутствовала регуляторная база, которая отвечала бы на главные вопросы: как защитить права
+                        инвесторов,
+                        как проверять качество проектов, а самих инициаторов – на возможность наличия мошеннических
+                        схем.</p>
+                    <div class="news-video" data-url="https://www.youtube.com/embed/dyq0j6vPIkU">
+                        <h3 class="news-video__name">
+                            <a href="#" class="news-video__open">Презентация мобильного приложения</a>
+                        </h3>
+                        <button class="news-video__play news-video__open">
+                            <img src="dist/images/icons/video-play.svg" alt="" class="news-video__icon">
+                            <span class="tdu">Смотреть</span>
+                        </button>
+                        <img src="dist/images/news-video.jpg" alt="" class="news-video__img">
+                    </div>
+                    <p class="text news-popup__text">У многих организаторов отношение к крауд-площадкам было сродни
+                        прежнему отношению к IT. Создать красивый сайт, на который сами собой придут деньги и клиенты.
+                        Хотя, подчеркивает Раев, на самом деле крауд-площадка – это полноценная финансовая структура,
+                        цель которой привлекать и, самое главное, возвращать деньги с доходностью.</p>
+                    <div class="news-popup__columns">
+                        <div class="news-popup__column">
+                            <p class="text news-popup__text">Сегодня iKapitalist – крупнейшая в стране лицензированная
+                                инвестиционная и заемная площадка, которая помогает частным инвесторам вкладывать
+                                средства в небольшие компании и получать среднюю доходность в размере 20% годовых.
+                                Компаниям же открывается доступ к финансированию на сумму до $5 млн в расчете на одну
+                                сделку, без необходимости обращаться в банк или выходить на биржу. На организованный
+                                рынок ориентируется средний и крупный бизнес, ключевой же фокус платформы iKapitalist –
+                                малый и средний. </p>
+                        </div>
+                        <div class="news-popup__column">
+                            <img src="dist/images/news/popup.jpg" alt="" class="news-popup__img">
+                        </div>
+                    </div>
+                    <h3></h3>
+                    <ol>
+                        <li>Основатель iKapitalist скептически настроен к потоку глобальных
+                            IPO, который обрушился на инвесторов в последний год. Считает, что рынок сильно перегрет и
+                            половина размещений были от компаний без определенной цели и бизнес-модели.</li>
+                        <li>Каждые два-три месяца платформа организовывает встречи, где
+                            портфельные компании рассказывают об обстановке на рынке, сложностях и путях преодоления,
+                            что помогает лучше понять бизнес и выстроить доверие, а значит, легче привлекать
+                            финансирование в будущем.</li>
+                        <li>У нас 38% повторных сделок, что меня очень радует, и мы упорно
+                            работаем, чтобы увеличить этот показатель, который является отражением удобства для
+                            предпринимателей и доверия со стороны инвесторов, – говорит Раев.</li>
+                    </ol>
+                    <h3>Положительные эффекты</h3>
+                    <ul>
+                        <li>Основатель iKapitalist скептически настроен к потоку глобальных
+                            IPO, который обрушился на инвесторов в последний год. Считает, что рынок сильно перегрет и
+                            половина размещений были от компаний без определенной цели и бизнес-модели.</li>
+                        <li>Каждые два-три месяца платформа организовывает встречи, где
+                            портфельные компании рассказывают об обстановке на рынке, сложностях и путях преодоления,
+                            что помогает лучше понять бизнес и выстроить доверие, а значит, легче привлекать
+                            финансирование в будущем.</li>
+                        <li>- У нас 38% повторных сделок, что меня очень радует, и мы упорно
+                            работаем, чтобы увеличить этот показатель, который является отражением удобства для
+                            предпринимателей и доверия со стороны инвесторов, – говорит Раев.</li>
+                    </ul>
+                </div>
+            </div>
+            <button class="close-btn popup__close news-popup__close"></button>
+        </div>
+    </div>
     <script src="dist/js/common.js"></script>
 </body>
 
