--- a/news.html
+++ b/news.html
@@ -124,12 +124,12 @@
                                     <div class="news-item__main">
                                         <div class="news-item__subtitle">Конференция iKapitalist</div>
                                         <h3 class="news-item__title">
-                                            <a href="#">Как увеличить IT экспорт</a>
+                                            <a href="#" class="btn-open-event">Как увеличить IT экспорт</a>
                                         </h3>
                                     </div>
                                     <div class="news-item__add">
                                         <div class="news-item__date">24 сен. 2021</div>
-                                        <a href="#" class="move-btn">Перейти</a>
+                                        <a href="#" class="move-btn btn-open-event">Перейти</a>
                                     </div>
                                 </div>
                             </div>
@@ -768,6 +768,154 @@
             </div>
         </div>
     </footer>
+    <div class="event-popup popup popup_hide">
+        <div class="event-popup__content">
+            <div class="event-popup__body">
+                <div class="event-popup__header">
+                    <img src="dist/images/news/1.jpg" alt="" class="event-popup__header-img">
+                    <h2 class="title2 event-popup__title">Финансирование подрядных организаций в энергетике</h2>
+                    <button class="move-btn event-popup__btn">Привлечь инвестиции</button>
+                </div>
+                <div class="event-popup__main">
+                    <div class="event-popup__article box">
+                        <h3 class="title3 event-popup__subtitle">Что будет?</h3>
+                        <p class="text event-popup__text">Boston Harbor Now in partnership with the Friends of Christopher
+                            Columbus Park, the Wharf District Council and the City of Boston is proud to announce the New
+                            Year's Eve Midnight Harbor Fireworks! This beloved nearly 40-year old tradition is made possible
+                            by the generous support of local waterfront organizations and businesses and the support of the
+                            City of Boston and the Office of Mayor Marty Walsh.</p>
+                        <p class="text event-popup__text">Join us as we ring in the New Year with a dazzling display over
+                            Boston Harbor. Public viewing is free and available from the Harborwalk of these suggested
+                            viewing locations:</p>
+                        <p class="text event-popup__text">
+                            Christopher Columbus Park, North End <br>
+                            Fan Pier, Seaport District <br>
+                            East Boston Harborwalk <br>
+                            The show will begin promptly at midnight.
+                        </p>
+                        <p class="text event-popup__text">
+                            Register here for a reminder and updates about the harbor fireworks and other waterfront public
+                            programs as they become available. Be the first to be notified for popular waterfront New Year's
+                            Eve public activities.</p>
+                        <div class="event-popup__confs">
+                        <h3 class="title3 event-popup__subtitle">График конференций</h3>
+                            <div class="event-popup__conf box">
+                                <h4 class="title4 event-popup__conf-title">
+                                    <a href="#">Как привлекать инвестиции для подрячных организаций в энергетике</a>
+                                </h4>
+                                <div class="event-popup__conf-meta">
+                                    <div class="event-popup__conf-time">15:00 - 15:10</div>
+                                    <div class="event-popup__conf-author">Нурбек Раев</div>
+                                </div>
+                            </div>
+                            <div class="event-popup__conf box">
+                                <h4 class="title4 event-popup__conf-title">
+                                    <a href="#">Как привлекать инвестиции для подрячных организаций в энергетике</a>
+                                </h4>
+                                <div class="event-popup__conf-meta">
+                                    <div class="event-popup__conf-time">15:00 - 15:10</div>
+                                    <div class="event-popup__conf-author">Нурбек Раев</div>
+                                </div>
+                            </div>
+                            <div class="event-popup__conf box">
+                                <h4 class="title4 event-popup__conf-title">
+                                    <a href="#">Как привлекать инвестиции для подрячных организаций в энергетике</a>
+                                </h4>
+                                <div class="event-popup__conf-meta">
+                                    <div class="event-popup__conf-time">15:00 - 15:10</div>
+                                    <div class="event-popup__conf-author">Нурбек Раев</div>
+                                </div>
+                            </div>
+                            <div class="event-popup__conf box">
+                                <h4 class="title4 event-popup__conf-title">
+                                    <a href="#">Как привлекать инвестиции для подрячных организаций в энергетике</a>
+                                </h4>
+                                <div class="event-popup__conf-meta">
+                                    <div class="event-popup__conf-time">15:00 - 15:10</div>
+                                    <div class="event-popup__conf-author">Нурбек Раев</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="event-popup__map box">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5960.23650554708!2d71.41543637093302!3d51.09054721247176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1639328526316!5m2!1sru!2sru" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+                    <div class="event-popup__aside">
+                        <div class="event-popup__inf box">
+                            <h3 class="title3 event-popup__subtitle">Информация</h3>
+                            <div class="event-popup__inf-list">
+                                <div class="event-popup__inf-item">
+                                    <span class="event-popup__inf-name">Дата</span>
+                                    <span class="event-popup__inf-value event-popup__inf-value_blue">8 сен. 2021</span>
+                                </div>
+                                <div class="event-popup__inf-item">
+                                    <span class="event-popup__inf-name">Время</span>
+                                    <span class="event-popup__inf-value event-popup__inf-value_blue">15:00 – 16:00</span>
+                                </div>
+                                <div class="event-popup__inf-item">
+                                    <span class="event-popup__inf-name">Вход</span>
+                                    <span class="event-popup__inf-value">Свободный</span>
+                                </div>
+                                <div class="event-popup__inf-item">
+                                    <span class="event-popup__inf-name">Формат</span>
+                                    <span class="event-popup__inf-value">Нур-Султан, Аль-фараби 2, блок 1
+                                        Creative Space</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="event-popup__speakers box">
+                            <h3 class="title3 event-popup__subtitle">Спикеры</h3>
+                            <div class="event-popup__speakers-list">
+                                <div class="author event-popup__speaker">
+                                    <img src="dist/images/speakers/1.jpg" alt="" class="author__img">
+                                    <div class="author__inf">
+                                        <span class="author__name">Нурбек Раев</span>
+                                        <span class="author__position">Директор, iKapitalist</span>
+                                    </div>
+                                </div>
+                                <div class="author event-popup__speaker">
+                                    <img src="dist/images/speakers/2.jpg" alt="" class="author__img">
+                                    <div class="author__inf">
+                                        <span class="author__name">Медер Сатибек</span>
+                                        <span class="author__position">Директор Art Price Group (APG)</span>
+                                    </div>
+                                </div>
+                                <div class="author event-popup__speaker">
+                                    <img src="dist/images/speakers/3.jpg" alt="" class="author__img">
+                                    <div class="author__inf">
+                                        <span class="author__name">Даурен Баймагамбетов</span>
+                                        <span class="author__position">Инвестиционный Директор, iKapitalist</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="event-popup__other box">
+                            <h3 class="title3">Другие конференции</h3>
+                            <div class="event-popup__other-list">
+                                <div class="event-popup__other-item">
+                                    <a href="#" class="link event-popup__other-link">Как увеличить IT экспорт</a>
+                                    <span class="event-popup__other-date">24 сен. 2021 в 13:30</span>
+                                </div>
+                                <div class="event-popup__other-item">
+                                    <a href="#" class="link event-popup__other-link">Как экспортировать в страны Ближнего Востока</a>
+                                    <span class="event-popup__other-date">24 сен. 2021 в 13:30</span>
+                                </div>
+                                <div class="event-popup__other-item">
+                                    <a href="#" class="link event-popup__other-link">Как увеличить IT экспорт</a>
+                                    <span class="event-popup__other-date">24 сен. 2021 в 13:30</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="event-popup__footer">
+                    <img src="dist/images/news/1.jpg" alt="" class="event-popup__footer-img">
+                    <button class="move-btn event-popup__footer-btn">Привлечь инвестиции</button>
+                </div>
+            </div>
+            <button class="close-btn popup__close event-popup__close"></button>
+        </div>
+    </div>
     <script src="dist/js/common.js"></script>
 </body>
 
