--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
                             <div class="swiper-slide">
                                 <div class="row gy-md-4">
                                     <div class="col-md-8">
-                                        <div class="news-video">
+                                        <div class="news-video news-slider__video" data-url="https://www.youtube.com/embed/dyq0j6vPIkU">
                                             <h3 class="news-video__name">
-                                                <a href="#">Презентация мобильного приложения</a>
+                                                <a href="#" class="news-video__open">Презентация мобильного приложения</a>
                                             </h3>
-                                            <button class="news-video__play">
+                                            <button class="news-video__play news-video__open">
                                                 <img src="dist/images/icons/video-play.svg" alt="" class="news-video__icon">
                                                 <span class="tdu">Смотреть</span>
                                             </button>
@@ -418,7 +418,7 @@
                                         </div>
                                     </div>
                                     <div class="col-4">
-                                        <div class="news-item news-item_big">
+                                        <div class="news-item news-item_big news-slider__big-item">
                                             <div class="news-item__header">
                                                 <img src="dist/images/news-big.jpg" alt="" class="news-item__img">
                                                 <h3 class="news-item__name">
@@ -462,11 +462,11 @@
                             <div class="swiper-slide">
                                 <div class="row gy-4">
                                     <div class="col-md-8">
-                                        <div class="news-video">
+                                        <div class="news-video news-slider__video" data-url="https://www.youtube.com/embed/dyq0j6vPIkU">
                                             <h3 class="news-video__name">
-                                                <a href="#">Презентация мобильного приложения</a>
+                                                <a href="#" class="news-video__open">Презентация мобильного приложения</a>
                                             </h3>
-                                            <button class="news-video__play">
+                                            <button class="news-video__play news-video__open">
                                                 <img src="dist/images/icons/video-play.svg" alt="" class="news-video__icon">
                                                 <span class="tdu">Смотреть</span>
                                             </button>
@@ -474,7 +474,7 @@
                                         </div>
                                     </div>
                                     <div class="col-4">
-                                        <div class="news-item news-item_big">
+                                        <div class="news-item news-item_big news-slider__big-item">
                                             <div class="news-item__header">
                                                 <img src="dist/images/news-big.jpg" alt="" class="news-item__img">
                                                 <h3 class="news-item__name">
@@ -518,11 +518,11 @@
                             <div class="swiper-slide">
                                 <div class="row gy-4">
                                     <div class="col-md-8">
-                                        <div class="news-video">
+                                        <div class="news-video news-slider__video" data-url="https://www.youtube.com/embed/dyq0j6vPIkU">
                                             <h3 class="news-video__name">
-                                                <a href="#">Презентация мобильного приложения</a>
+                                                <a href="#" class="news-video__open">Презентация мобильного приложения</a>
                                             </h3>
-                                            <button class="news-video__play">
+                                            <button class="news-video__play news-video__open">
                                                 <img src="dist/images/icons/video-play.svg" alt="" class="news-video__icon">
                                                 <span class="tdu">Смотреть</span>
                                             </button>
@@ -530,7 +530,7 @@
                                         </div>
                                     </div>
                                     <div class="col-4">
-                                        <div class="news-item news-item_big">
+                                        <div class="news-item news-item_big news-slider__big-item">
                                             <div class="news-item__header">
                                                 <img src="dist/images/news-big.jpg" alt="" class="news-item__img">
                                                 <h3 class="news-item__name">
