fix video popup

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css?v=1">
     <title>iKapitalist - Вход</title>
 </head>
 
@@ -176,7 +176,7 @@
         </section>
 
     </main>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=1"></script>
 
     <div class="popup privacy-popup popup_hide">
         <div class="privacy-popup__content">
