--- a/investors.html
+++ b/investors.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css?v=1">
     <title>iKapitalist - Инвесторам</title>
 </head>
 
@@ -834,7 +834,7 @@
             </div>
         </div>
     </footer>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=1"></script>
 </body>
 
 </html>
