--- a/news-list.html
+++ b/news-list.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css?v=1">
     <title>iKapitalist - Список новостей</title>
 </head>
 
@@ -423,7 +423,7 @@
             <button class="close-btn popup__close news-popup__close"></button>
         </div>
     </div>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=1"></script>
 </body>
 
 </html>
