--- a/referal-form-advisor.html
+++ b/referal-form-advisor.html
@@ -279,7 +279,7 @@
         </section>
 
     </main>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=1"></script>
 </body>
 
 </html>
