fix register form

--- a/login.html
+++ b/login.html
@@ -83,6 +83,7 @@
                                             </div>
 
                                             <div class="login__register login__register_2 login__hide">
+                                                <p class="form__text">Регистрация шаг 2/3</p>
                                                 <div class="form__item">
                                                     <input type="text" id="form-register-first-name" name="first-name" class="form__field"
                                                         placeholder="Иван">
@@ -109,6 +110,7 @@
                                             </div>
 
                                             <div class="login__register login__register_3 login__hide">
+                                                <p class="form__text">Регистрация шаг 3/3</p>
                                                 <div class="form__item">
                                                     <input type="text" id="form-register-pass" name="pass" class="form__field"
                                                         placeholder="Введите пароль">
