--- a/news-list.html
+++ b/news-list.html
@@ -329,7 +329,7 @@
             <div class="news-popup__body">
                 <h2 class="title2 news-popup__title">Как финансист из Нур-Султана помогает заработать на МСБ 25% годовых
                 </h2>
-                <img src="dist/images/news/3.jpg" alt="" class="news-popup__main-img">
+                <img src="dist/images/news/3-big.jpg" alt="" class="news-popup__main-img">
                 <div class="news-popup__main">
                     <p>Четыре года назад имевший 18-летний опыт работы в финансовом
                         секторе, увлеченный
