add burger-menu & progress-bar

--- a/investors.html
+++ b/investors.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=1">
+    <link rel="stylesheet" href="dist/css/styles.css?v=2">
     <title>iKapitalist - Инвесторам</title>
 </head>
 
@@ -94,6 +94,9 @@
                             </a>
                         </li>
                     </ul>
+                    <button class="menu__open">
+                        <span class="menu__open-lines"></span>
+                    </button>
                 </nav>
                 <button class="callback-btn header__callback-btn">Получить консультацию</button>
             </div>
@@ -178,7 +181,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -213,7 +218,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -248,7 +255,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -283,7 +292,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -318,7 +329,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -353,7 +366,9 @@
                                         <span
                                             class="category categories__item category_green card__category">Исполнено</span>
                                     </div>
-                                    <div class="card__addition">100%</div>
+                                    <div class="progress card__progress">
+                                        <div class="progress-bar card__progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
                                     <div class="card__nums">
                                         <div class="card__num">
                                             <span class="card__num-text">Цель</span>
@@ -835,7 +850,7 @@
             </div>
         </div>
     </footer>
-    <script src="dist/js/common.js?v=1"></script>
+    <script src="dist/js/common.js?v=2"></script>
 </body>
 
 </html>
