--- a/smi.html
+++ b/smi.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=1">
+    <link rel="stylesheet" href="dist/css/styles.css?v=2">
     <title>iKapitalist - СМИ о нас</title>
 </head>
 
@@ -163,6 +163,9 @@
                             </a>
                         </li>
                     </ul>
+                    <button class="menu__open">
+                        <span class="menu__open-lines"></span>
+                    </button>
                 </nav>
                 <button class="callback-btn header__callback-btn">Получить консультацию</button>
             </div>
@@ -312,7 +315,7 @@
             </div>
         </div>
     </footer>
-    <script src="dist/js/common.js?v=1"></script>
+    <script src="dist/js/common.js?v=2"></script>
 </body>
 
 </html>
